--- a/VintedProject/src/app/Components/Pages/User/login/login.component.css
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.css
@@ -1,4 +1,73 @@
-.container-wrapper {
+.mainContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.backgroundImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: contrast(0.15);
+}
+
+.loginCardContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+}
+
+.front, .back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+
+.front {
+  transform: rotateY(0);
+  display: flex;
+  flex-direction: column;
+}
+
+.back {
+  transform: rotateY(180deg);
+  display: flex;
+  flex-direction: column;
+}
+
+.flipped .front {
+  transform: rotateY(-180deg);
+}
+
+.flipped .back {
+  transform: rotateY(0);
+}
+
+h2{
+  font-family: 'Times New Roman', Times, serif;
+}
+
+form > div {
+  display: flex;
+  flex-direction: column;
+}
+
+/*.container-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,4 +118,4 @@
 
 .button:hover {
   background-color: #45a049;
-}
+}*/
