--- a/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.html
+++ b/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.html
@@ -9,8 +9,8 @@
         <h1>{{ insertion?.title }}</h1>
         <p>
           <strong>
-            CONDIZIONI {{ insertion?.condition}} <br>
-            COLORE {{ insertion?.condition}} <br>
+            Categoria {{ insertion?.category}} <br>
+            Brand {{ insertion?.brand}} <br>
           </strong>
         </p>
       </div>
