--- a/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
@@ -1,15 +1,32 @@
+.mainContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.backgroundImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: contrast(0.15);
+}
 .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+
 }
 
 .form-container {
-  max-width: 400px;
+  max-width: 500px;
   padding: 20px;
-  background-color: #f2f2f2;
   border-radius: 5px;
+  background-color: transparent;
+  border: 2px solid black;
 }
 
 .form-group {
