--- a/VintedProject/src/app/Components/Pages/User/login/login.component.css
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.css
@@ -16,13 +16,23 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
-  height: 400px;
+  width: 500px;
+  height: 700px;
   perspective: 1000px;
   background-color: transparent;
   display: flex;
   flex-direction: column;
   border: 2px solid black;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin: 0 auto;
 }
 
 .front, .back {
