--- a/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.css
+++ b/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.css
@@ -63,4 +63,83 @@
   margin-bottom: 10px;
 }
 
-/* Aggiungi altri stili personalizzati a tua scelta */
+.button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.insertion-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.insertion-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.body-content {
+  margin: auto;
+  width: 85%;
+  padding: 10px;
+  position: relative;
+  min-height: 450px;
+}
+
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.showAll-button {
+  background-color: lightblue;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-family: Maison Neue;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1;
+  cursor: pointer;
+}
+
+.card-container {
+  overflow-x: auto;
+  padding: 0 20px;
+  margin: 2px;
+}
+
+.card-row {
+  display: flex;
+  gap: 2%
+
+}
+
+.card-item {
+  flex: 1 1 auto;
+  max-height: 8%;
+}
+
+.button {
+  text-align: center;
+  font-weight: bold;
+  height: 50px;
+  min-width: 80px;
+  margin: 20px;
+  border: 1px solid #262626;
+  border-radius: 4px;
+  vertical-align: top;
+  padding-right: 8px;
+  padding-bottom: 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
