--- a/VintedProject/src/app/Components/Pages/cart/cart.component.html
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="button-container">
-      <button class="button" (click)="createOrder()" >Acquista</button>
+      <button class="button" >Acquista</button>
     </div>
   </div>
 </div>
