--- a/VintedProject/src/app/Components/Pages/cart/cart.component.css
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.css
@@ -64,8 +64,50 @@
 .button-container {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* Modifica la distanza dal contenuto precedente se necessario */
 }
+
+.body-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.payment-methods {
+  margin-left: 20px;
+}
+
+.button-container {
+  margin-left: 20px;
+}
+
+.insertion-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.card-container {
+  flex: 0 0 100%;
+}
+
+.payment-container {
+  flex: 0 0 25%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.payment-methods {
+  margin-bottom: 20px;
+
+}
+
+.button-container {
+  align-self: flex-end;
+  margin-left: auto;
+}
+
 
 
 
