--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -25,7 +25,7 @@
           <label  style="margin: 0 5px; margin-top: 10%;">Password:</label>
           <input type="password" style="margin: 0 5px; " [(ngModel)]="newUser.password" name="registerPassword">
           <label  style="margin: 0 5px; margin-top: 10%;">Conferma password:</label>
-          <input type="password" style="margin: 0 5px; " [(ngModel)]="newUser.passwordCheck" name="registerConfirmPassword">
+          <input type="password" style="margin: 0 5px; " [(ngModel)]="passwordCheck" name="registerConfirmPassword">
         </div>
 
       </form>
