--- a/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
@@ -5,8 +5,8 @@
   <div style="padding-left: 2%;">
     <div class="product-card">
       <!-- Visualizza i dettagli del prodotto -->
-      <h2>{{ item?.creationDate}}</h2>
-      <p style="max-width: 250px">totale: {{ item?.total }}</p>
+      <h2>{{ item?.date}}</h2>
+      <p style="max-width: 250px">totale: {{ item?.number }}</p>
     </div>
   </div>
 </div>
