--- a/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
@@ -2,7 +2,7 @@
   <div>
     <img style=" max-height: 180px;"  [src]="'https://localhost:8010/vintedProject-api/v1/images/{{item.imagepath}}' ||'assets/resources/vestito.jpg'"  (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
   </div>
-  <div style="padding-left: 2%;" (click)="onImageClick()" >>
+  <div style="padding-left: 2%;" (click)="onImageClick()" >
     <div class="product-card">
       <!-- Visualizza i dettagli del prodotto -->
       <h2>{{ item?.title }}</h2>
