--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -20,6 +20,8 @@
         <div id="secondColumn">
           <label>Username:</label>
           <input type="text" [(ngModel)]="newUser.nickName" name="registerNickName">
+          <label style="margin: 0 5px;margin-top: 10%;">Nome:</label>
+          <input type="text" [(ngModel)]="newUser.firstName" name="registerNome">
           <label  style="margin: 0 5px;margin-top: 10%;">Email:</label>
           <input type="email" style="margin: 0 5px;" [(ngModel)]="newUser.email" name="registerMail">
           <label  style="margin: 0 5px; margin-top: 10%;">Password:</label>
@@ -27,12 +29,10 @@
           <label  style="margin: 0 5px; margin-top: 10%;">Conferma password:</label>
           <input type="password" style="margin: 0 5px; " [(ngModel)]="passwordCheck" name="registerConfirmPassword">
         </div>
-
       </form>
       <button mat-flat-button style="margin-top: 12%; color: rgb(3, 90, 3);" [disabled]="!isRegistrationFormValid()" (click)="signUp()">Registrati</button>
       <button mat-flat-button style="margin-top: 12%;" (click)="flipCard()">Passa all'accesso</button>
     </div>
-  </div>
 </div>
 
 <!--<div class="container-wrapper">
