--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -5,9 +5,9 @@
       <h2>LOGIN</h2>
       <form id="log" style="display: flex;">
         <div id="firstColumn">
-          <label for="loginuser" style="margin: 0 5px;">Email:</label>
+          <label style="margin: 0 5px;">Email:</label>
           <input type="email" style="margin: 0 5px;" [(ngModel)]="login.email" name="loginMail">
-          <label for="loginPass" style="margin: 0 5px; margin-top: 10%;">Password:</label>
+          <label style="margin: 0 5px; margin-top: 10%;">Password:</label>
           <input type="password" style="margin: 0 5px; margin-top: 3%;" [(ngModel)]="login.password" name="loginPassword">
         </div>
       </form>
@@ -59,3 +59,4 @@
     <button class="button" style="background-color: darkblue;"  [routerLink]="['/singin']">Registrati</button>
   </div>
 </div>-->
+</div>
