--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -31,21 +31,21 @@
 <h2 class="font">Ricerca per brand</h2>
 <div style="height: 20px; min-width: 20px"></div>
 <div style="flex-wrap: wrap; display: flex;">
-  <button class="button btn" [routerLink]="['/brand' , 'adidas']" >Adidas</button>
-  <button class="button btn" [routerLink]="['/brand' , 'puma']" >Puma</button>
-  <button class="button btn" [routerLink]="['/brand' , 'nike']" >Nike</button>
-  <button class="button btn" [routerLink]="['/brand' , 'microsoft']" >Microsoft</button>
-  <button class="button btn" [routerLink]="['/brand' , 'xiaomi']" >Xiaomi</button>
-  <button class="button btn" [routerLink]="['/brand' , 'nothing']" >Nothing</button>
-  <button class="button btn" [routerLink]="['/brand' , 'guess']" >Guess</button>
-  <button class="button btn" [routerLink]="['/brand' , 'adidas']" >Pumpling</button>
-  <button class="button btn" [routerLink]="['/brand' , 'fila']" >Fila</button>
-  <button class="button btn" [routerLink]="['/brand' , 'onze']" >Onze</button>
-  <button class="button btn" [routerLink]="['/brand' , 'gojiang']" >Gojiang</button>
-  <button class="button btn" [routerLink]="['/brand' , 'rebook']" >Rebook</button>
-  <button class="button btn" [routerLink]="['/brand' , 'new_balance']" >New Balance</button>
-  <button class="button btn" [routerLink]="['/brand' , 'asix']" >Asix</button>
-  <button class="button btn" [routerLink]="['/brand' , 'sony']" >Sony</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Adidas']" >Adidas</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Puma']" >Puma</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Nike']" >Nike</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Microsoft']" >Microsoft</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Xiaomi']" >Xiaomi</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Nothing']" >Nothing</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Guess']" >Guess</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Fila']" >Fila</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Onze']" >Onze</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Gojiang']" >Gojiang</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Rebook']" >Rebook</button>
+  <button class="button btn" [routerLink]="['/brand' , 'New_balance']" >New Balance</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Asix']" >Asix</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Sony']" >Sony</button>
+  <button class="button btn" [routerLink]="['/brand' , 'Altro']" >Altro</button>
 </div>
 </div>
 
