--- a/VintedProject/src/app/Components/Pages/cart/cart.component.html
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="insertion-container"  style="margin: 5%" *ngIf="cartProduct">
+<div class="insertion-container" style="margin: 5%" *ngIf="cartProduct">
   <div class="card-container">
     <div class="card-row">
       <ng-container *ngFor="let item of cartProduct; let i = index;">
@@ -6,22 +6,23 @@
       </ng-container>
     </div>
   </div>
+  <hr style="position: fixed; bottom: 20%; left: 20px; right: 20px; border: none; border-top: 1px solid #ccc;">
   <div style="margin: 10%">
-  <div class="payment-container">
-    <div class="payment-methods" >
-      <h2>Metodi di pagamento disponibili:</h2>
-      <ul >
-        <li style="margin: 5%" *ngFor="let method of paymentMethods">
-          <label>
-            <input type="radio" name="paymentMethod" [value]="method" [(ngModel)]="selectedPaymentMethod">
-            {{ method }}
-          </label>
-        </li>
-      </ul>
-    </div>
-    <div class="button-container">
-      <button class="button">Acquista</button>
+    <div class="payment-container">
+      <div class="button-container" style="position: fixed; bottom: 20px; right: 20px;">
+        <button class="button">Acquista</button>
+      </div>
+      <div class="payment-methods" style="position: fixed; bottom: 20px; left: 20px;">
+        <h2>Metodi di pagamento disponibili:</h2>
+        <ul>
+          <li style="margin: 5%" *ngFor="let method of paymentMethods">
+            <label>
+              <input type="radio" name="paymentMethod" [value]="method" [(ngModel)]="selectedPaymentMethod">
+              {{ method }}
+            </label>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 </div>
