--- a/VintedProject/src/app/Components/Pages/cart/cart.component.html
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.html
@@ -10,7 +10,7 @@
   <div style="margin: 10%">
     <div class="payment-container">
       <div class="button-container" style="position: fixed; bottom: 20px; right: 20px;">
-        <button class="button">Acquista</button>
+        <button class="button" (click)="createOrder()">Acquista</button>
       </div>
       <div class="payment-methods" style="position: fixed; bottom: 20px; left: 20px;">
         <h2>Metodi di pagamento disponibili:</h2>
