--- a/VintedProject/src/app/Components/Pages/User/login/login.component.css
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.css
@@ -13,16 +13,18 @@
 
 .loginCardContainer {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 700px;
+  width: 25%;
+  height:86%;
   perspective: 1000px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px); /* Applica il blur all'elemento */
   display: flex;
   flex-direction: column;
   border: 2px solid black;
+  border-radius: 5px;
 }
 
 input[type="text"],
