--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -20,12 +20,23 @@
         <div id="secondColumn">
           <label style="margin: 0 5px;margin-top: 10%;">Nome:</label>
           <input type="text" [(ngModel)]="newUser.firstName" name="registerNome">
-          <label  style="margin: 0 5px;margin-top: 10%;">Email:</label>
+          <label style="margin: 0 5px;margin-top: 10%;">Cognome:</label>
+          <input type="text" [(ngModel)]="newUser.surname" name="registerSur">
+          <label style="margin: 0 5px;margin-top: 10%;">Email:</label>
           <input type="email" style="margin: 0 5px;" [(ngModel)]="newUser.email" name="registerMail">
-          <label  style="margin: 0 5px; margin-top: 10%;">Password:</label>
+          <label style="margin: 0 5px; margin-top: 10%;">Password:</label>
           <input type="password" style="margin: 0 5px; " [(ngModel)]="newUser.password" name="registerPassword">
-          <label  style="margin: 0 5px; margin-top: 10%;">Conferma password:</label>
+          <label style="margin: 0 5px; margin-top: 10%;">Conferma password:</label>
           <input type="password" style="margin: 0 5px; " [(ngModel)]="passwordCheck" name="registerConfirmPassword">
+          <hr style="margin-top: 20%; width: 99%; background-color: black; border-color: black " >
+          <label style="margin: 0 5px; margin-top: 10%;">Indirizzo:</label>
+          <input type="text" style="margin: 0 5px; " [(ngModel)]="newUser.addressStreet" name="registerAddressStreet">
+          <label style="margin: 0 5px; margin-top: 10%;">Numero civico:</label>
+          <input type="text" style="margin: 0 5px; " [(ngModel)]="newUser.addressNumber" name="registerAddressNumber">
+          <label style="margin: 0 5px; margin-top: 10%;">Città:</label>
+          <input type="text" style="margin: 0 5px; " [(ngModel)]="newUser.addressCity" name="registerAddressCity">
+          <label style="margin: 0 5px; margin-top: 10%;">CAP:</label>
+          <input type="text" style="margin: 0 5px; " [(ngModel)]="newUser.addressCap" name="registerAddressCap">
         </div>
       </form>
       <button mat-flat-button style="margin-top: 12%; color: rgb(3, 90, 3);" [disabled]="!isRegistrationFormValid()" (click)="signUp()">Registrati</button>
