fix image layout

--- a/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
@@ -1,5 +1,5 @@
   <div>
-    <img style="max-height: 25%; max-width: 20%; margin-left: 2%" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+    <img style="max-height: 200px; max-width: 250px; margin-left: 2%" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
   </div>
   <div style="padding-left: 2%;" (click)="onImageClick()">
     <div class="product-card">
