--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -57,7 +57,7 @@
     <button mat-button [routerLink]="['/category' , 'casa']">Casa</button>
     <button mat-button [routerLink]="['/category' , 'intrattenimento']">Intrattenimento</button>
     <button mat-button [routerLink]="['/category' , 'animali']">Animali</button>
-    <button mat-button [routerLink]="['/informazioni']">Informazioni</button>
+    <button mat-button [routerLink]="['/dash']">Informazioni</button>
     <button mat-button [routerLink]="['/cart']">Accesso rapido al carrello</button>
   </div>
 </div>
