--- a/VintedProject/src/app/Components/Querys/category/category.component.html
+++ b/VintedProject/src/app/Components/Querys/category/category.component.html
@@ -3,7 +3,7 @@
     <div class="card-container">
       <div class="card-row">
         <ng-container *ngFor="let item of insertion?.content; let i = index;">
-          <app-product-card [item]="item" class="card-item"></app-product-card>
+          <app-profile-card [user]="getUserByUserId(item.userId)" [userId]="item.userId" [insertion]="item"> </app-profile-card>
           <ng-container *ngIf="(i + 1) % 6 === 0" class="clearfix"></ng-container>
         </ng-container>
       </div>
