--- a/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/insertion-card/product-card.component.html
@@ -1,10 +1,12 @@
-  <div>
-    <img style="max-height: 200px; max-width: 250px; margin-left: 2%" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+<div class="product-card">
+  <div class="image-container">
+    <img class="rounded-image" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
   </div>
-  <div style="padding-left: 2%;" (click)="onImageClick()">
-    <div class="product-card">
-      <h2 style="text-align: left;">{{ item?.title }}</h2>
-      <p style="width: 15%">{{ item?.description }}</p>
-      <p>Prezzo: {{ item?.price }}€</p>
-    </div>
+  <div class="content-container" (click)="onImageClick()">
+    <h2 class="title">{{ item?.title }}</h2>
+    <p class="description">{{ item?.description }}</p>
   </div>
+  <div class="price-container">
+    <p class="price">Prezzo: {{ item?.price }}€</p>
+  </div>
+</div>
