--- a/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.css
@@ -30,7 +30,7 @@ body {
 
 .productImage {
   max-width: 100%;
-  height: auto;
+  height: 500px;
   cursor: pointer;
 }
 
@@ -118,6 +118,18 @@ body {
   cursor: pointer;
 }
 
+.modal::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+}
+
+
 .userContainer{
   width: 80%;
   background-color: #D7D7D7;
@@ -126,12 +138,24 @@ body {
   margin-top: 20px;
   justify-content: center;
   align-items: center;
-  height: 250px;
-
   text-align: center; /* Centra il contenuto orizzontalmente */
+}
+
+.card-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
+
+.userContainer {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+
