--- a/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.html
+++ b/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="image-container">
-    <img class="productImage" [src]="'https://localhost:8010/vintedProject-api/v1/images/'+ insertion?.imageName ||'assets/resources/vestito.jpg'">
+    <img class="productImage" [src]="'https://localhost:8010/vintedProject-api/v1/images/'+ insertion?.imageName ||'assets/resources/vestito.jpg'" (click)="openModal()">
   </div>
 
   <div class="info-container">
@@ -30,34 +30,33 @@
       <button class="btn second-button">Contatta il venditore</button>
     </div>
     <div class="image-thumbnails">
-      <div *ngFor="let image of insertion?.imageName" class="thumbnail" (click)="openModal(image)">
+      <div *ngFor="let image of insertion?.imageName" class="thumbnail" (click)="openModal()">
         <img [src]="image" alt="Thumbnail">
       </div>
     </div>
   </div>
 </div>
-<div class="userContainer">
+<div class="userContainer" >
   <div style="width: 100%;">
-    <p>qui dentro vanno i post dell'utente</p>
+    <h2>Altri post di {{user?.firstName}}</h2>
     <div class="card-container">
       <div class="card-row">
         <div *ngFor="let item of userOtherInsertion?.content" class="card-item">
           <div class="user-insertion-card">
-            <div class="user-image-container">
-              <img class="user-image" [src]="user?.imageName ||  'assets/resources/vestito.jpg' " alt="User Image">
-            </div>
-            <app-product-card [item]="item"></app-product-card>
+            <div class="card-row" style="margin: 20px">
+            <app-profile-card [user]="getUserByUserId(item.userId)" [userId]="item.userId" [insertion]="item"></app-profile-card>
+           </div>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px"  [routerLink]="['/profile', this.user?.id]">Vedi tutti i prodotti</button>
       </div>
+      <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px" [routerLink]="['/profile', this.user?.id]">Vedi tutti i prodotti</button>
     </div>
   </div>
 </div>
 <div style="height: 20px"></div>
 
 <!-- Finestra modale -->
-<div class="modal" *ngIf="modalOpen">
+<div class="modal" *ngIf="modalOpen" (click)="closeModal()">
   <span class="close" (click)="closeModal()">&times;</span>
-  <img [src]="modalImage || 'assets/resources/vestito.jpg'" alt="Modal Image">
+  <img [src]="modalImage ? 'https://localhost:8010/vintedProject-api/v1/images/' + modalImage : 'assets/resources/vestito.jpg'" alt="Modal Image">
 </div>
