--- a/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
+++ b/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
@@ -29,7 +29,7 @@
             <div class="card-container">
               <div class="card-row">
                 <ng-container *ngFor="let item of myInsertion?.content; let i = index;">
-                  <app-product-card [item]="item" class="card-item"></app-product-card>
+                  <app-profile-card [user]="user" [userId]="item.userId" [insertion]="item" class="card-item"></app-profile-card>
                   <ng-container *ngIf="(i + 1) % 6 === 0" class="clearfix"></ng-container>
                 </ng-container>
               </div>
@@ -55,4 +55,4 @@
         </div>
       </div>
     </div>
-</div>
+
