--- a/VintedProject/src/app/Components/Pages/User/profile/profile.component.css
+++ b/VintedProject/src/app/Components/Pages/User/profile/profile.component.css
@@ -1,22 +1,3 @@
-
-.button {
-  text-align: center;
-  font-weight: bold;
-  height: 50px;
-  min-width: 80px;
-  margin: 20px;
-  border: 1px solid #262626;
-  border-radius: 4px;
-  vertical-align: top;
-  padding-right: 8px;
-  padding-bottom: 8px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
 .profile-page {
   max-width: 800px;
   margin: 0 auto;
@@ -46,21 +27,32 @@
   margin-left: 20px;
 }
 
-.other-insertions-container {
-  margin-top: 30px;
+.userContainer{
+  width: 80%;
+  background-color: #D7D7D7;
+  display: flex;
+  margin:10%;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center; /* Centra il contenuto orizzontalmente */
 }
 
-.insertion-card {
-  border: 1px solid #ccc;
+.card-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.userContainer {
+  max-width: 100%;
+  margin: 0 auto;
   padding: 20px;
-  margin-bottom: 10px;
 }
 
-.insertion-image {
-  width: 100%;
-  max-height: 200px;
-  object-fit: cover;
-  margin-bottom: 10px;
-}
 
-/* Aggiungi altri stili personalizzati a tua scelta */
