--- a/VintedProject/src/app/Components/Querys/brand/brand.component.html
+++ b/VintedProject/src/app/Components/Querys/brand/brand.component.html
@@ -3,8 +3,8 @@
     <div class="card-container">
       <div class="card-row">
         <ng-container *ngFor="let item of Brandedinsertion?.content; let i = index;">
-          <app-product-card [item]="item" class="card-item"></app-product-card>
-          <ng-container *ngIf="(i + 1) % 6 === 0" class="clearfix"></ng-container>
+          <app-profile-card [user]="getUserByUserId(item.userId)" [userId]="item.userId" [insertion]="item"> </app-profile-card>
+            <ng-container *ngIf="(i + 1) % 6 === 0" class="clearfix"></ng-container>
         </ng-container>
       </div>
     </div>
