Tante altre cose

--- a/VintedProject/src/app/Components/Components/Cards/cart-insertion-card/cart-insertion-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/cart-insertion-card/cart-insertion-card.component.html
@@ -7,7 +7,7 @@
       <!-- Visualizza i dettagli del prodotto -->
       <h2>{{ item?.title }}</h2>
       <p style="max-width: 250px">{{ item?.description }}</p>
-      <p>Prezzo: {{ item?.price }}</p>
+      <p>Prezzo: {{ item?.price }}€</p>
     </div>
   </div>
   <button class="button remove-button" (click)="remove(item?.id)">Rimuovi</button>
