--- a/VintedProject/src/app/Components/Pages/cart/cart.component.html
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.html
@@ -10,6 +10,7 @@
   <div style="margin: 10%">
     <div class="payment-container">
       <div class="button-container" style="position: fixed; bottom: 20px; right: 20px;">
+        <h2 style="margin: 40px"> Totale: {{totalCost}}€</h2>
         <button class="button" (click)="createOrder()">Acquista</button>
       </div>
       <div class="payment-methods" style="position: fixed; bottom: 20px; left: 20px;">
@@ -25,4 +26,6 @@
       </div>
     </div>
   </div>
+
 </div>
+
