--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -65,3 +65,5 @@
 
 
 <router-outlet></router-outlet>
+
+<app-bottom-of-the-barrel style="width: 500px; margin-top: 100px; "> </app-bottom-of-the-barrel>
